--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#services">Features</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Photos</a>
@@ -62,7 +62,7 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Get unparallel insights and resources on this fabulous individual curated by the top expert in the world.</p>
+          <p class="text-white-75 font-weight-light mb-5">Welcome to the best place to learn about what Regina can do. Get unparallel insights and resources on this fabulous individual curated by top expert in the world.</p>
           <a class="btn btn-primary btn-lg js-scroll-trigger" href="#about">Get Started</a>
         </div>
       </div>
@@ -170,19 +170,6 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Lunch at Claremont Club
-              </div>
-              <div class="project-name">
-                May 2018
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
@@ -196,14 +183,14 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Vacation in Medelin
+                Lunch at Claremont Club
               </div>
               <div class="project-name">
-                October 2018
+                May 2018
               </div>
             </div>
           </a>
@@ -217,6 +204,19 @@
               </div>
               <div class="project-name">
                 May 2018
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Vacation in Medelin
+              </div>
+              <div class="project-name">
+                October 2018
               </div>
             </div>
           </a>
@@ -253,7 +253,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">Let's Be Friends!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Ready to take the next step? Give me a call or send me an email and I will get back to you!</p>
+          <p class="text-muted mb-5">Ready to take the next step? Connect with me to get information, the news, weather, and more — using the latest technology from this past century.</p>
         </div>
       </div>
       <div class="row">
@@ -274,6 +274,7 @@
   <footer class="bg-light py-5">
     <div class="container">
       <div class="small text-center text-muted">Copyright &copy; 2019 - Regina Wong</div>
+      <div class="small text-center text-muted"><span><a class="d-block" href="mailto:sevendollarlatte+regwong@gmail.com">Want a site like this? Let's Talk.</a></span></div>
     </div>
   </footer>
 
